[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funstat-api"
version = "0.1.2"
description = "Sync and async Python client for the Funstat API (Telegram user/group statistics)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "meiji", email = "chizumeiji@gmail.com" }
]
keywords = ["telegram", "funstat", "api", "client", "statistics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.0",
  "requests>=2.28",
  "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/chizumeiji/funstat-api"
Documentation = "https://chizumeiji.github.io/funstat-api/"
"Bug Tracker" = "https://github.com/chizumeiji/funstat-api/issues"